new version to lesson 5

--- a/05-project-structure/esm/package.json
+++ b/05-project-structure/esm/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "myapp",
+  "name": "demo3",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.19.2"
   }
 }
